--- a/python_backend/requirements.txt
+++ b/python_backend/requirements.txt
@@ -12,3 +12,6 @@ langchain-anthropic
 langchain-google-genai
 langchain-groq
 langchain-fireworks
+langgraph-checkpoint-sqlite
+langgraph-checkpoint-postgres
+rich
