--- a/python_backend/requirements.txt
+++ b/python_backend/requirements.txt
@@ -1,19 +1,5 @@
-langgraph
-langchain
-langchain-openai
-langchain-core
-pydantic
-tavily-python
-python-dotenv
-asyncpg
-sqlalchemy
-aiosqlite
-langchain-anthropic
-langchain-google-genai
-langchain-groq
-langchain-fireworks
-langgraph-checkpoint-sqlite
-langgraph-checkpoint-postgres
+langgraph>=0.2.0
+langgraph-checkpoint-postgres>=2.0.0
 rich
 pytest
 pytest-asyncio
