--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# Compiled
+*.pyc
+__pycache__
+
 # dependencies
 /node_modules
 /.pnp
